@@ -1,3 +1,8 @@
+2008-08-29  Daniel Morales  <daniminas@gmail.com>
+
+	* src/twitux-xml.c:
+	* src/twitux-xml.h: New files
+
 2008-03-27  Brian Pepple  <bpepple@fedoraproject.org>
 
 	* src/twitux-add-dialog.c (twitux_add_dialog_show): 
